--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,6 +9,8 @@ $gray-light: #bbb;
 $gray-lighter: #ddd;
 $gray-lightest: #f2f2f2;
 
-$primary: #214050;
-$secondary: #9e0927;
-$ternary: #CD9F53;
+$primary: #ff2b00;
+$primary-dark: #e52700;
+$primary-bright: #ffd5cc;
+$secondary: #01a0ff;
+$ternary: #ff0080;
