--- a/src/index.scss
+++ b/src/index.scss
@@ -102,11 +102,11 @@ a:hover {
 }
 
 a:focus {
-  color: $secondary;
-  background: transparentize($secondary, 0.9);
-  box-shadow: inset 0 0 0 1px transparentize($secondary, 0.95);
+  color: $primary-dark;
+  background: $primary-bright;
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0);
   outline: none;
-  border-radius: 2px;
+  border-radius: 0.125em;
 }
 
 abbr,
