--- a/src/index.scss
+++ b/src/index.scss
@@ -442,10 +442,6 @@ ul.iconized {
   color: $gray-dark;
 }
 
-.two-authors li:first-child:after {
-  content: ' and ';
-}
-
 .video {
   display: block;
   margin-left: auto;
@@ -460,17 +456,47 @@ ul.iconized {
   }
 }
 
-.reference .title {
-  font-weight: 700;
-  margin-bottom: 0.25rem;
-}
+.reference {
+  .title {
+    font-weight: 700;
+    margin-bottom: 0.25rem;
+  }
 
-.reference .authors {
-  margin-bottom: 0.125rem;
-}
+  .authors {
+    margin-bottom: 0.125rem;
+  }
 
-.reference .secondary-information {
-  font-size: 0.9em;
+  .authors li:after {
+    content: ', ';
+  }
+
+  .authors li:nth-last-child(2):after {
+    content: ' and ';
+  }
+
+  .authors li:last-child:after {
+    content: '';
+  }
+
+  .badges {
+    margin-top: 0.125rem;
+
+    li {
+      padding: 0 0.25em;
+      font-size: 0.85em;
+      text-transform: uppercase;
+      border-radius: 0.125rem;
+    }
+  }
+
+  .preprint {
+    color: $gray-dark;
+    background: $gray-lighter;
+  }
+
+  .secondary-information {
+    font-size: 0.9em;
+  }
 }
 
 .btn {
