--- a/src/index.scss
+++ b/src/index.scss
@@ -848,7 +848,7 @@ ul.iconized {
 
 #footer {
   margin-top: 1rem;
-  padding: 2rem 0;
+  padding: 2rem 0 0 0;
   font-size: 0.85em;
   color: $gray-medium;
   background: $gray-lighter;
@@ -862,7 +862,6 @@ ul.iconized {
   }
 
   .vcg-name {
-
     font-family: 'Open Sans Condensed';
     text-align: right;
     line-height: 1.125em;
@@ -892,6 +891,24 @@ ul.iconized {
 
   .copyright {
     font-size: 0.9em;
+  }
+
+  #more-at-lekschas-de {
+    margin-top: 1rem;
+    padding: 0.75rem 0;
+    font-size: 1.125em;
+    background: $black;
+
+    a {
+      padding: 0.25em;
+      color: $primary;
+      box-shadow: inset 0 -1px 0 0 transparentize($primary, 0.5);
+
+      &:hover,
+      &:focus {
+        color: $black;
+      }
+    }
   }
 }
 
