--- a/src/index.scss
+++ b/src/index.scss
@@ -446,18 +446,12 @@ ul.iconized {
   color: $gray-dark;
 }
 
-.video {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+.full-wh {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .reference {
@@ -594,7 +588,20 @@ ul.iconized {
   font-style: italic;
 }
 
-.columns {
+.columns-2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  @supports (display: grid) {
+    display: grid;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  }
+}
+
+.columns-1-2 .column {
   position: relative;
   overflow: auto;
 
@@ -918,7 +925,7 @@ ul.iconized {
   }
 }
 
-#youtube {
+#video, #slides {
   @include ratio(3840, 2145);
 }
 
@@ -961,10 +968,6 @@ ul.iconized {
     margin-left: -10%;  /* 1/12 */
     margin-right: -10%;
   }
-
-  .video {
-    width: 90%;
-  }
 }
 
 /* 800px */
@@ -997,10 +1000,6 @@ ul.iconized {
   .large-screen {
     margin-left: -4rem;
     margin-right: -4rem;
-  }
-
-  .video {
-    width: 80%;
   }
 
   .column-1-2 {
@@ -1038,10 +1037,6 @@ ul.iconized {
   .large-screen {
     margin-left: -10rem;
     margin-right: -10rem;
-  }
-
-  .video {
-    width: 70%;
   }
 
   .text .column-1-2:first-child {
